# code-sample

./: CMakeLists.txt  README.md
data/: object.frag  object.vert
src/: Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  Shaders.cpp  Shaders.hpp  Window.cpp  Window.hpp  config.h.in  driver.cpp  image_loader.cpp  image_loader.hpp
test/: test.cpp
